samples/_failures_safe/1761604173_22908a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_571a8009.c: In function ‘main’:
./samples/SAFE/__tmp_571a8009.c:164:9: error: expected expression at end of input
  164 |         switch (
      |         ^~~~~~
./samples/SAFE/__tmp_571a8009.c:164:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_571a8009.c:164:9: error: expected declaration or statement at end of input
